2003-03-25  David Ayers  <d.ayers@inode.at>

	* Headers/gnustep/base/GSObjCRuntime.h
	* Source/Additions/GSObjCRuntime.m (GSObjCReplaceImplementation):
	Added new function. 
	* Source/Additions/GSObjCRuntime.m (search_for_method_in_class):
	Renamed static function for NeXT runtime to better reflect
	reality.
	(GSObjCAddMethods): Updated usage.
	(search_for_method_in_class): New static function for GNU runtime.
	(flush_method_cache_for_class): New function.

2003-03-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Completed merge of changes from 1.6.0 branch.

2003-03-17  Adam Fedor  <fedor@gnu.org>

	* Version 1.6.0

2003-03-17  Adam Fedor  <fedor@gnu.org>

	* Testing/LoadMe.m (afterLoad): Use description, not name.
	* Testing/nsfilemanager.m: Print some output. Clean up.
	* Testing/scanner.m, nstimezone.m, release.m: Idem.

	* config/config.vsprintf, config/config.vasprintf: Rewrite to
	properly call a variable argument function.

2003-03-14  Adam Fedor  <fedor@Eldorado.local.>

	* Testing/nsarray.m (compare): Un-nest function.

	* Source/NSProcessInfo.m (-operatingSystem): Add darwin. 

2003-03-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: ([-isDeletableFileAtPath:]) Fix for the
	case where the path is a file in the current directory.

2003-03-11  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Fix some typos (Reported by
	Alexander Malmberg <alexander@malmberg.org>).

2003-03-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSSet.h: Added a few non-openstep declarations
	* Source/GSCompatibility.m: OAppend() sort dictionary keys even if
	locale is nil.

2003-03-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Fix reference to zone of deallocated object.
	Bug reported by Roland Schwingel
	* Source/NSFileManager.m: Fix typo (using logical or rather than
	bitwise or) in call to access()
	Bug reported by Roland Schwingel

2003-02-17    <woudshoo@agilisys.com>

	* GNUmakefile (GNUSTEP_TARGET_INSTALL_PREFIX)